add index implementation

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,31 +1,12 @@
-<!-- Remove the container if you want to extend the Footer to full width. -->
-<div class="my-5">
-
-    <footer class="text-center text-lg-start" style="background-color: #db6930;">
-      <div class="container d-flex justify-content-center py-5">
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
-          <i class="fab fa-facebook-f"></i>
-        </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
-          <i class="fab fa-youtube"></i>
-        </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
-          <i class="fab fa-instagram"></i>
-        </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
-          <i class="fab fa-twitter"></i>
-        </button>
+ <!-- Footer -->
+ <footer class="text-center mt-5 footer-style">
+  <div class="container">
+      <p><strong>Ubicación:</strong> Edificio C, plaza alta, salón TIC's 701</p>
+      <p>© Dulc's 2024 - Todos los derechos reservados.</p>
+      <div>
+          <a href="#" class="me-2"><img src="../assets/icon/instagram.svg" alt="Instagram" class="footer-icon"/></a>
+          <a href="#"><img src="../assets/icon/facebook.svg" alt="Facebook" class="footer-icon"/></a>
       </div>
-  
-      <!-- Copyright -->
-      <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2020 Copyright:
-        <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-        <i class="fi fi-brands-instagram"></i>
-      </div>
-      <!-- Copyright -->
-    </footer>
-    
   </div>
-  <!-- End -->
+</footer>
   
