--- a/html/navbar.html
+++ b/html/navbar.html
@@ -1,14 +1,25 @@
-<ul class="nav nav-underline">
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Active</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-  </li>
-</ul>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light navbar-color">
+  <div class="container-fluid">
+      <!-- Sección izquierda: Menú de navegación -->
+      <div class="d-flex">
+          <ul class="navbar-nav me-auto">
+              <li class="nav-item"><a class="nav-link font-style after-style" href="../index.html">Inicio</a></li>
+              <li class="nav-item"><a class="nav-link font-style after-style" href="../html/productos.html">Productos</a></li>
+              <li class="nav-item"><a class="nav-link font-style after-style" href="../html/nosotros.html">Nosotros</a></li>
+          </ul>
+      </div>
+
+      <!-- Sección central -->
+      <div class="d-flex justify-content-center mx-auto">
+          <a class="navbar-brand" href="../index.html"><img src="../assets/img/Logo.png" alt="Dulc's Logo" style="height: 50px;" /></a>
+      </div>
+
+      <!-- Sección derecha -->
+      <div class="d-flex">
+          <a href="#" class="me-2"><img src="../assets/icon/instagram.svg" alt="Instagram" class="nav-icon" /></a>
+          <a href="#" class="me-2"><img src="../assets/icon/facebook.svg" alt="Facebook" class="nav-icon" /></a>
+          <a href="#"><img src="../assets/icon/Shopping_cart.svg" alt="Carrito" class="nav-icon" /></a>
+      </div>
+  </div>
+</nav>
