--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=Protest+Riot&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  
   <title>Mi Sitio Web</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -15,8 +16,78 @@
   <!-- Contenedor donde se cargará el NavBar -->
   <div id="navbar"></div>
 
+  <header class="text-center header-style">
+    <img src="assets/img/Fondo-imagen-index.jpeg" class="img-fluid w-100 img-position" alt="Header Image" />
+    <div class = "text-style">
+        <h1>Dulzura que despierta el alma</h1>
+    </div>
+</header>
+
   <!-- Contenido de la página principal -->
-  <h1>Bienvenido a mi sitio web</h1>
+  <div class="container mt-3">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="assets/img/Carrusel-index.png" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="assets/img/Cacahuates.png" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="assets/img/Gomitas.png" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
+  <div class="container mt-3">
+    <div class="text d-flex col-12 align-items-center justify-content-center">
+        <img src="assets/img/Top-ventas.png" class="img-size" alt="Exitos">
+        <h2>Productos mas vendidos</h2>
+    </div>
+  </div>
+
+  <div class="container mt-3">
+    <div class="row d-flex justify-content-evenly">
+      <!-- Primera card -->
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top w-75 align-self-center" src="assets/img/Takis.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+      <!-- Segunda card -->
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top w-75 align-self-center" src="assets/img/Cacahuates.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+      <!-- Tercera card -->
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top w-75 align-self-center" src="assets/img/Gomitas.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
 
   <!-- Contenedor donde se cargará el Footer -->
   <div id="footer"></div>
@@ -25,5 +96,6 @@
   <script src="js/loadContent.js"></script>
   <!-- Script de bootstrap -->
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
