New pages realized

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
   <!-- Tipografía -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=Protest+Riot&display=swap" rel="stylesheet">
+  <!-- Estilos -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style-index.css">
   
-  <title>Mi Sitio Web</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Dulc's</title>
 </head>
 <body>
   <!-- Contenedor donde se cargará el NavBar -->
@@ -21,10 +22,12 @@
     <div class = "text-style">
         <h1>Dulzura que despierta el alma</h1>
     </div>
-</header>
+  </header>
 
   <!-- Contenido de la página principal -->
   <div class="container mt-3">
+    <!-- Carrusel -->
+     <!-- Problemas con el scrip creo... -->
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -47,6 +50,7 @@
       </a>
     </div>
   </div>
+<!-- Fin carrusel-->
 
   <div class="container mt-3">
     <div class="text d-flex col-12 align-items-center justify-content-center">
@@ -55,36 +59,98 @@
     </div>
   </div>
 
-  <div class="container mt-3">
+  <div class="container">
     <div class="row d-flex justify-content-evenly">
       <!-- Primera card -->
-      <div class="card" style="width: 18rem;">
+      <div class="card mt-3" style="width: 18rem;">
         <img class="card-img-top w-75 align-self-center" src="assets/img/Takis.png" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title text-center">Takis fuego</h5>
+          <p class="card-text text-center">$20 MXN</p>
+          <div class="row align-items-center justify-content-center border border-black rounded-pill overflow-hidden">
+            <!-- Mas -->
+            <div class="col-2 fs-4">
+              <p class="mb-0 text-center">+</p>
+            </div>
+            <!-- Cantidad -->
+            <div class="col-2 fs-4">
+              <p class="mb-0 text-center">1</p>
+            </div>
+            <!-- Menos -->
+            <div class="col-2 fs-4">
+              <p class="mb-0 text-center">-</p>
+            </div>
+
+            <div class="col-2">
+
+            </div>
+
+            <div class="col-4 fs-4 d-flex p-0">
+              <a href="#" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
+            </div>
+          </div>
         </div>
       </div>
       <!-- Segunda card -->
-      <div class="card" style="width: 18rem;">
+      <div class="card mt-3" style="width: 18rem;">
         <img class="card-img-top w-75 align-self-center" src="assets/img/Cacahuates.png" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title text-center">Cacahuetes japoneses</h5>
+          <p class="card-text text-center">$15 MXN</p>
+          <div class="row align-items-center justify-content-center border border-black rounded-pill overflow-hidden">
+            <!-- Mas -->
+            <div class="col-2 fs-4">
+              <p class="mb-0 text-center">+</p>
+            </div>
+            <!-- Cantidad -->
+            <div class="col-2 fs-4">
+              <p class="mb-0 text-center">1</p>
+            </div>
+            <!-- Menos -->
+            <div class="col-2 fs-4">
+              <p class="mb-0 text-center">-</p>
+            </div>
+
+            <div class="col-2">
+
+            </div>
+
+            <div class="col-4 fs-4 d-flex p-0">
+              <a href="#" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
+            </div>
+          </div>
         </div>
       </div>
       <!-- Tercera card -->
-      <div class="card" style="width: 18rem;">
+      <div class="card mt-3" style="width: 18rem;">
         <img class="card-img-top w-75 align-self-center" src="assets/img/Gomitas.png" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title text-center">Gomitas vivoritas</h5>
+          <p class="card-text text-center">$20 MXN</p>
+          <div class="row align-items-center justify-content-center border border-black rounded-pill overflow-hidden">
+            <!-- Mas -->
+            <div class="col-2 fs-4">
+              <p class="mb-0 text-center">+</p>
+            </div>
+            <!-- Cantidad -->
+            <div class="col-2 fs-4">
+              <p class="mb-0 text-center">1</p>
+            </div>
+            <!-- Menos -->
+            <div class="col-2 fs-4">
+              <p class="mb-0 text-center">-</p>
+            </div>
+
+            <div class="col-2">
+
+            </div>
+
+            <div class="col-4 fs-4 d-flex p-0">
+              <a href="#" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
+            </div>
+          </div>
         </div>
       </div>
-
     </div>
   </div>
 
@@ -94,8 +160,6 @@
 
   <!-- Script para cargar el NavBar y el Footer -->
   <script src="js/loadContent.js"></script>
-  <!-- Script de bootstrap -->
-  <script src="js/bootstrap.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
