add pages and designs

--- a/html/aniversario.html
+++ b/html/aniversario.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style-aniversario.css">
     <link rel="stylesheet" href="../css/style-index.css">
+
+    <link rel="shortcut icon" href="../assets/icon/dulcs.svg"/>
     <title>Aniversario</title>
 </head>
 <body>
@@ -21,7 +23,7 @@
         
         <div class="row justify-content-center text-center color-text-title">
             <h1 class="w-75 mt-5">¡BIENVENIDO!</h1>
-            <h2 class="w-75">ESTAMOS CELEBRANDO 2 AÑOS GRACIAS</h2>
+            <h2 class="w-75">ESTAMOS CELEBRANDO 2 AÑOS, ¡GRACIAS!</h2>
         </div>
 
         <div class="row justify-content-center text-center color-text-p mt-4">
@@ -29,7 +31,7 @@
         </div>
 
         <div class="row justify-content-center text-center color-text-p mt-4">
-            <p class="w-75"> ¡Celebra con nosotros, porque estos 2 son gracias a ti!</p>
+            <p class="w-75"> ¡Celebra con nosotros, porque estos 2 años son gracias a ti!</p>
         </div>
 
         <div class="row mt-5 justify-content-center">
@@ -38,9 +40,9 @@
                 <img class="w-50 p-3 rounded-5" src="../assets/img/lambo-aniversario.jpg" alt="Card image cap">
                 <div class="card-body fs-4 d-flex flex-column color-text h-75">
 
-                    <p class="card-text m-0">Registra tu ticket de compra con monto mínimo de $400000000 para participar en nuestra rifa 2 años, 1 GRAN PREMIO</p>
+                    <p class="card-text m-0">Registra tu ticket de compra con monto mínimo de $400,000,000 para participar en nuestra rifa de 2 años. UN GRAN PREMIO</p>
                     
-                    <p class="card-text mt-auto">¡No te quedes atras y participa!</p>
+                    <p class="card-text mt-auto">¡No te quedes atrás y participa!</p>
 
                 </div>
               </div>
