--- a/html/marcas.html
+++ b/html/marcas.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style-index.css">
     <link rel="stylesheet" href="../css/sty">
+
+    <link rel="shortcut icon" href="../assets/icon/dulcs.svg"/>
     <title>Marcas</title>
 </head>
 <body>
@@ -18,7 +20,7 @@
     <div id="navbar"></div>
 
      <header class="head-blog">
-         <img src="../assets/img/Fondo-marcas-blog.png" alt="Imagen dulc's" class="w-100">
+         <img src="../assets/img/Fondo-marcas.png" alt="Imagen dulc's" class="w-100">
      </header>
 
     <!-- Contenido -->
