--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style-index.css">
     <link rel="stylesheet" href="../css/style-nosotros.css">
+
+    <link rel="shortcut icon" href="../assets/icon/dulcs.svg"/>
     <title>Nosotros</title>
 </head>
 <body>
