--- a/html/productos.html
+++ b/html/productos.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style-index.css">
     <link rel="stylesheet" href="../css/style-productos.css">
+
+    <link rel="shortcut icon" href="../assets/icon/dulcs.svg"/>
     <title>Productos</title>
 </head>
 <body>
@@ -33,46 +35,46 @@
                   </form>
             </div>
             <!-- Filtrado  y productos -->
-            <div class="row d-flex justify-content-evenly">
+            <div class="row d-flex justify-content-evenly color-text-navigator">
                 <!-- Filtrado -->
                 <div class="card mt-3 color alto" style="width: 18rem;">
                     <div class="card-body ">
-                    <h5 class="card-title text-center">Categorias</h5>
+                    <h5 class="card-title text-center color color-white">Categorías</h5>
                     
                     <!-- Inicio check -->
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                        <label class="form-check-label" for="defaultCheck1">
+                        <label class="form-check-label color-white" for="defaultCheck1">
                           Chicles
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                        <label class="form-check-label" for="defaultCheck1">
+                        <label class="form-check-label color-white" for="defaultCheck1">
                           Botanas
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                        <label class="form-check-label" for="defaultCheck1">
+                        <label class="form-check-label color-white" for="defaultCheck1">
                           Chocolates
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                        <label class="form-check-label" for="defaultCheck1">
+                        <label class="form-check-label color-white" for="defaultCheck1">
                           Gomitas
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                        <label class="form-check-label" for="defaultCheck1">
+                        <label class="form-check-label color-white" for="defaultCheck1">
                           Paletas
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                        <label class="form-check-label" for="defaultCheck1">
+                        <label class="form-check-label color-white" for="defaultCheck1">
                           Bombones
                         </label>
                       </div>
@@ -107,14 +109,14 @@
                         </div>
 
                         <div class="col-4 fs-4 d-flex p-0">
-                        <a href="#" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
+                        <a href="producto_1.html" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
                         </div>
                     </div>
                     </div>
                 </div>
                 <!-- Segunda card -->
                 <div class="card mt-3" style="width: 18rem;">
-                    <img class="card-img-top w-75 align-self-center" src="../assets/img/Gomitas.png" alt="Card image cap">
+                    <img class="card-img-top w-75 align-self-center" src="../assets/img/Takis.png" alt="Card image cap">
                     <div class="card-body">
                     <h5 class="card-title text-center">Takis fuego</h5>
                     <p class="card-text text-center">$20 MXN</p>
@@ -137,7 +139,7 @@
                         </div>
 
                         <div class="col-4 fs-4 d-flex p-0">
-                        <a href="#" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
+                        <a href="producto_2.html" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
                         </div>
                     </div>
                     </div>
@@ -148,9 +150,9 @@
 
                 </div>
                 <!-- Tercera card -->
-                <div class="card mt-3" style="width: 18rem;">
+                <div class="card" style="width: 18rem;">
                     <img class="card-img-top w-100 align-self-center" src="../assets/img/Chocolate-rosa.png" alt="Card image cap">
-                    <div class="card-body">
+                    <div class="card-body d-flex justify-content-end flex-column">
                     <h5 class="card-title text-center">Chocolate de la rosa</h5>
                     <p class="card-text text-center">$15 MXN</p>
                     <div class="row align-items-center justify-content-center border border-black rounded-pill overflow-hidden">
@@ -172,7 +174,7 @@
                         </div>
 
                         <div class="col-4 fs-4 d-flex p-0">
-                        <a href="#" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
+                        <a href="producto_3.html" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
                         </div>
                     </div>
                     </div>
@@ -203,7 +205,7 @@
                         </div>
 
                         <div class="col-4 fs-4 d-flex p-0">
-                        <a href="#" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
+                        <a href="producto_4.html" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
                         </div>
                     </div>
                     </div>
