--- a/html/sucursal.html
+++ b/html/sucursal.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style-sucursal.css">
     <link rel="stylesheet" href="../css/style-index.css">
+
+    <link rel="shortcut icon" href="../assets/icon/dulcs.svg"/>
     <title>Sucursal</title>
 </head>
 <body>
@@ -48,8 +50,8 @@
                 <!-- Texto -->
                 <div class="text-center col-md-4 col-lg-6 col-sm-12 margin">
                     <h1 class="title-red">Encuéntranos...</h1>
-                    <p class="text">En nuestra sucursal del Instituto tecnologco superior de salvatierra</p>
-                    <p class="text">Estamos en el edifico C, planta alta salón TI - 701</p>
+                    <p class="text">En nuestra sucursal del Instituto tecnológico superior de salvatierra</p>
+                    <p class="text">Estamos en el edifico C, planta alta, salón TI - 701</p>
                 </div>
      </div>
 </div>
