--- a/html/ofertas.html
+++ b/html/ofertas.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style-index.css">
     <link rel="stylesheet" href="../css/style-ofertas.css">
+
+    <link rel="shortcut icon" href="../assets/icon/dulcs.svg"/>
     <title>Ofertas</title>
 </head>
 <body>
