--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style-index.css">
   
+  <link rel="shortcut icon" href="assets/icon/dulcs.svg"/>
   <title>Dulc's</title>
 </head>
 <body>
@@ -28,34 +29,33 @@
   <div class="container mt-3">
     <!-- Carrusel -->
      <!-- Problemas con el scrip creo... -->
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+     <div id="carouselExampleControls" class="carousel slide overflow-hidden" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="assets/img/Carrusel-index.png" alt="First slide">
+          <img src="assets/img/Carrusel-index.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="assets/img/Cacahuates.png" alt="Second slide">
+          <img src="assets/img/carrusel-index-1.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="assets/img/Gomitas.png" alt="Third slide">
+          <img src="assets/img/carrusel-index-2.png" class="d-block w-100" alt="...">
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+        <span class="visually-hidden">Siguiente</span>
+      </button>
     </div>
-  </div>
 <!-- Fin carrusel-->
 
   <div class="container mt-3">
     <div class="text d-flex col-12 align-items-center justify-content-center">
         <img src="assets/img/Top-ventas.png" class="img-size" alt="Exitos">
-        <h2>Productos mas vendidos</h2>
+        <h2 class="text-center">Productos más vendidos</h2>
     </div>
   </div>
 
@@ -86,7 +86,7 @@
             </div>
 
             <div class="col-4 fs-4 d-flex p-0">
-              <a href="#" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
+              <a href="html/producto_2.html" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
             </div>
           </div>
         </div>
@@ -116,7 +116,7 @@
             </div>
 
             <div class="col-4 fs-4 d-flex p-0">
-              <a href="#" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
+              <a href="html/producto_1.html" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
             </div>
           </div>
         </div>
@@ -146,12 +146,14 @@
             </div>
 
             <div class="col-4 fs-4 d-flex p-0">
-              <a href="#" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
+              <a href="html/producto_4.html" class="btn color-button d-flex w-100 justify-content-center rounded-pill">Comprar</a>
             </div>
           </div>
         </div>
       </div>
+      <!-- Fin contenedor  -->
     </div>
+  </div>
   </div>
 
 
